Fix z-index. Update homepageUrl

--- a/src/styles/button.less
+++ b/src/styles/button.less
@@ -11,7 +11,7 @@
     left: 0;
     top: 0;
     position: fixed !important;
-    z-index: 99999999999999999999 !important;
+    z-index: 2147483647 !important;
     width: 40px !important;
     height: 40px !important;
     zoom: 1 !important;
